--- a/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
@@ -20,10 +20,10 @@
 \newline
 \newline
 \indent
-  Planowanie ruchu zawsze wiąże się z rozmiarem problemu. Dla koordynacji ruchu na skrzyżowaniach rozmiarem problemu jest rozmiar dróg, ich liczba oraz liczba przecięć między nimi, a także parametry i liczba pojazdów. Z planowaniem ruchu wiąże się trudność jaką jest szybkość zmian w środowisku. W przypadku nie zastosowania się pojazdu do planu, algorytm musi natychmiast wyliczyć poprawiony plan. Z tego względu algorytm nie powinien zajmować dużo czasu. Algorytmy heurystyczne są najczejściej stosowane w często zmieniających się środowiskach.
+  Planowanie ruchu zawsze wiąże się z rozmiarem problemu. Dla koordynacji ruchu na skrzyżowaniach rozmiarem problemu jest rozmiar dróg, ich liczba oraz liczba przecięć między nimi, a także parametry i liczba pojazdów. Z planowaniem ruchu wiąże się trudność jaką jest szybkość zmian w środowisku. W przypadku nie zastosowania się pojazdu do planu, algorytm musi natychmiast wyliczyć poprawiony plan. System planujący ruch drogowy powinien być więc systemem czasu rzeczywistego. Cechą takich systemów jest rownloegłość w czasie zmian w środowisku oraz prowadzonych przez system obliczeń opierjących się o stan środowiska. Algorytmy heurystyczne są najczejściej stosowane w często zmieniających się środowiskach.
 \newline
 \indent
-  Często stosowanym algorytmem do znajdowania najkrótszej ścieżki w grafie jest algorytm Dijkstry. O rzędzie złożoności algorytmu decyduje implementacja kolejki. W przypadku implementacji kolejki poprzez kopiec złożoność algortmu to:
+Popolarnym modelem reprezentującym sieci dróg jest graf. Wierzchołki grafu to skrzyżowania dróg. Krawędzie natomiast reprezentują odległości między skrzyżowaniami, za pomocą wag. Często stosowanym algorytmem do znajdowania najkrótszej ścieżki w grafie jest algorytm Dijkstry. O rzędzie złożoności algorytmu decyduje implementacja kolejki. W przypadku implementacji kolejki poprzez kopiec złożoność algortmu to:
 \newline
 \newline
 \begin{math}
@@ -59,10 +59,10 @@ Autorzy artykułu \cite{leena2014survey} zwrócili uwagę na podział planowania
 Najczęściej stosowanym systemem do koordynacji ruchu na skrzyżowaniach są światła drogowe. Powodują one opóźnienia wiążące się z oczekiwaniem przy świetle pomarańczowym, które jednocześnie zapewnia bezpieczeństwo. Powstało wiele optymalizacji świateł drogowych w celu przyspieszenia ruchu na skrzyżowaniach.
 \newline
 \indent
-W artykule \cite{brockfeld2001optimizing} autorzy opisują następujące optymalizacje sygnalizacji świetlnej: \textit{Synchronized Traffic Lights, Green Wave, Random Offset}. Synchroniczne światła drogowe oparte są o obliczane cykle oraz o klastry samochodow poruszających się po skrzyżowaniach. Klaster samochodów rusza, gdy pojawi się światło zielone. Pierwszy samochód rusza z największym przyspieszeniem, aż dojedzie do następnego skrzyżowania. Wówczas natychmiast włącza się światło czerwone i reszta samochodów w klastrze dojeżdża do skrzyżowania. Cykle są obliczane w sposób, aby opóźnienia były najmniejsze. Zgodnie ze zdaniem autorów, jedną z wad jest fakt, że rozwiązanie działa najlepiej dla nierealistycznych cykli. W celu usprawnienia autorzy zaproponowali strategię zielonej fali. Głównym celem tego podejście jest to, aby duże klastry samochodów były w ruchu. W artykule, strategia zielonej fali daje lepsze efekty niż startegia synchronicznych świateł. Ostatnią przedstawioną strategią jest losowa zmiana świateł przed skrzyżowaniami. W przeciwieństwie do poprzednich strategii - światła na skrzyżowanach nie przełączją się jednocześnie. Użycie tej strategii powoduje powstawanie dużych klastrów samochodów na niektórych drogach i szybki przepływ na innych. Globalnie strategia zielonej falii przynosiła najlepsze efekty. Przedstawione rozwiązania muszą jednak stosować światło pomarańczowe w celu utrzymania bezpieczeństwa co powoduje opóźnienia na każdym skrzyżowaniu.
+W artykule \cite{brockfeld2001optimizing} autorzy opisują następujące optymalizacje sygnalizacji świetlnej: \textit{Synchronized Traffic Lights, Green Wave, Random Offset}. Synchroniczne światła drogowe oparte są o obliczane cykle oraz o klastry samochodow poruszających się po skrzyżowaniach. Klaster samochodów rusza, gdy pojawi się światło zielone. Pierwszy samochód rusza z największym przyspieszeniem, aż dojedzie do następnego skrzyżowania. Wówczas natychmiast włącza się światło czerwone i reszta samochodów w klastrze dojeżdża do skrzyżowania. Cykle są obliczane w sposób, aby opóźnienia były najmniejsze. Zgodnie ze zdaniem autorów, jedną z wad jest fakt, że rozwiązanie działa najlepiej dla cykli, które nie występują na rzeczywistych skrzyżowaniach. W celu usprawnienia autorzy zaproponowali strategię zielonej fali. Głównym celem tego podejście jest to, aby duże klastry samochodów były w ruchu. W artykule, strategia zielonej fali daje lepsze efekty niż startegia synchronicznych świateł. Ostatnią przedstawioną strategią jest losowa zmiana świateł przed skrzyżowaniami. W przeciwieństwie do poprzednich strategii - światła na skrzyżowanach nie przełączją się jednocześnie. Użycie tej strategii powoduje powstawanie dużych klastrów samochodów na niektórych drogach i szybki przepływ na innych. Globalnie strategia zielonej falii przynosiła najlepsze efekty. Przedstawione rozwiązania muszą jednak stosować światło pomarańczowe w celu utrzymania bezpieczeństwa co powoduje opóźnienia na każdym skrzyżowaniu.
 \newline
 \indent
-Autorzy artykułu \cite{athmaraman2005adaptive} opisują koordynację ruchu przy użyciu algorytmu 'REAL TIME QUEUE LENGTH ESTIMATION: THE APTTC ALGORITHM'. Koordynacja ta działa przy użyciu tablicy sensorów fotoelektrycznych rozmieszczonych w topologii. Algorytm w zależności od danych i estymacji kolejek odpowowiednio steruje sygnalizacją świetlną w celu uniknięcia opóźnień. Algorytm został uruchomiony w mieście Chennai w Indiach, gdzie wyestymowane zostały długości kolejek aut na drogach poprzez zamontowane sensory na każdy dzień tygodnia. Rozwiązanie jest jednak zaprojektowane do działania na jednym skrzyżowaniu oraz nie eliminuje opóźnień spowodowachnych światłem pomarańczowym. Co więcej, w rozwiązaniu konieczne jest montowanie sensorów na drogach.
+Autorzy artykułu \cite{athmaraman2005adaptive} opisują koordynację ruchu przy użyciu algorytmu 'REAL TIME QUEUE LENGTH ESTIMATION: THE APTTC ALGORITHM'. Koordynacja ta działa przy użyciu tablicy sensorów fotoelektrycznych rozmieszczonych na drogach przy skrzyżowaniach. Algorytm w zależności od danych i estymacji kolejek odpowowiednio steruje sygnalizacją świetlną w celu uniknięcia opóźnień. Algorytm został uruchomiony w mieście Chennai w Indiach, gdzie wyestymowane zostały długości kolejek aut na drogach poprzez zamontowane sensory na każdy dzień tygodnia. Rozwiązanie jest jednak zaprojektowane do działania na jednym skrzyżowaniu oraz nie eliminuje opóźnień spowodowachnych światłem pomarańczowym. Co więcej, w rozwiązaniu konieczne jest montowanie sensorów na drogach.
 \newline
 \indent
 W artykule \cite{de1998optimal} opisane zostało kierowanie ruchem drogowym na jednym skrzyżowaniu poprzez optymalizację kolejek. W rozwiązaniu brane pod uwage są takie dane jak: średni czas oczekiwania, średnia długość kolejki, najgorszy czas oczekiwania. Istnieje także możliwość przekazania parametrów odpowiadających za maksymalny czas trwania światła czerwonego oraz zielonego. Wynikiem rozwiązania jest schemat zmiany świateł, który liczony jest za pomocą funkcji obiektowych na podstawie długości kolejek. W rozwiązaniu pominięty został element bezpieczeństwa jakim jest światło pomarańczowe. Rozwiązanie zostało pokazane także na jednym skrzyżowaniu, a nie na całej sieci skrzyżowań.
@@ -114,7 +114,7 @@ W artykule \cite{delling2009engineering} autorzy przeprowadzili porównanie algo
 Wykorzystanie modyfikacji algorytmu A* wraz z algorytmem Wavefront zostało przedstawione w artykule \cite{wojnicki2015robust}. Autorzy przedstawili wersję algorytmu A*, która operuje na stanach. Autorzy pokazali przykład na dwuwymiarowej, dyskretnej przestrzeni kwadratowej o boku 7. Stanem początkowym jest rozłożenie czterech obiektów na rogach zadanej przestrzeni. Stanem końcowym natomiast, jest znalezienie się tych czterech obiektów po przeciwnych stronach przekątnych. Algortym Wavefront został zastosowany w celu otrzymania planów wielowariantowych dla obiektów. Zastosowanie algorytmu A* operującego na stanach wraz z prędkościami pojazdów wnosi duże narzuty obliczeniowe. Przeprowadzenie koordynacji ruchu dla dużych sieci skrzyżowań używając algorytmu A* wraz z Wavefront jest zbyt złożone.
 \newline
 \indent
-W artykul \cite{elhalawany2013modified} autorzy zaproponowali modyfikację algorytmu A*, która skupia sie na bezpieczeństwie w problemie nawigacji robotów. Modyfikacja polega na wzięciu pod uwagę rozmiaru robota oraz unikanie ostrych skrętów jeżeli chodzi o bezpieczeństwo. Do algorytmu A* przekazywany jest stan początkowy oraz cel jaki robot ma osiągnąc. Rozwiązanie przedstawione jest dla pojedyńczego pojazdu, który ma za zadanie znaleźć najprosztą i bezpieczną ścieżkę wraz z unikaniem statycznych kolizji. Tego podejścia nie da się zastosować dla wielu pojazdów poruszających się po sieci skrzyżowań.
+W artykule \cite{elhalawany2013modified} autorzy zaproponowali modyfikację algorytmu A*, która skupia sie na bezpieczeństwie w problemie nawigacji robotów. Modyfikacja polega na wzięciu pod uwagę rozmiaru robota oraz unikanie ostrych skrętów jeżeli chodzi o bezpieczeństwo. Do algorytmu A* przekazywany jest stan początkowy oraz cel jaki robot ma osiągnąc. Rozwiązanie przedstawione jest dla pojedyńczego pojazdu, który ma za zadanie znaleźć najprosztą i bezpieczną ścieżkę wraz z unikaniem statycznych kolizji. Tego podejścia nie da się zastosować dla wielu pojazdów poruszających się po sieci skrzyżowań.
 
 \section{Modyfikacje A*}
 
@@ -123,3 +123,6 @@ Autorzy artykułu \cite{munteanmobile} opisali modyfikację algorytmu A* do plan
 \newline
 \indent
 W artykule \cite{oleiwi2014modified} autorzy zaproponowali genetyczny algorytm oparty na zmodyfikowanym algorytmie A* w celu optymalizacji znajdowania ścieżek dla wielu obiektów. Modyfikacja algorytmu A* polega na znalezieniu ścieżki suboptymalnej poprzez dodanie do algorytmu funkcji prawdopodobieństwa. Uniknięto więc szukania najkrótszej ścieżki, aby zwiększyc optymalność algorytmu. To rozwiązanie następnie jest przekazywane to algorytmu genetycznego. W rozwiązaniu uwzględnione zostało także unikanie kolizji. Autorzy opisali podejście optymalizacji szukania najkrótszej ścieżki dla pojedyńczego pojazdu z unikaniem kolizji ze statycznymi elemntami. Tego rozwiązania nie da się zastosować w sieci skrzyżowań, na której znajduje się wiele aut.
+\newline
+\indent
+W celu planowania ruchu na skrzyżowaniach zostało przedstawione sporo rozwiązań. Większość z nich opiera się o stosowanie świateł. Powyżej zostały opisane optymalizacje świateł w celu przyspieszania ruchu drogowego. Rozwiązania te gwarantują bezpieczeństwo poprzez czekanie na świetle pomarańczowym, co powoduje kilkusekundowe straty na każdym skrzyżowaniu. Takich opóźnień nie ma stosując planowanie algorytmem. Przedstawione rozwiązania przy użyciu algorytmów planowania często nie brały pod uwagę unikania kolizji lub planowały jedynie ruch dla pojedyńczego pojazdu. Tych podejść nie da się zastosować w celu zaplanowania ruchu na sieci skrzyżowań dla kilkunastu pojazdów.
