Adding skeleton for outocomes chapter

--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -18,10 +18,13 @@ Planowanie ruchu na skrzyżowaniach wiaże się z czestymi zmianami środowiska.
 
 \section{Specyfikacja problemu}
 
-Problemem przedstawionym w pracy jest szybkie i bezpieczne zaplanowanie ruchu na skrzyżowaniach. Mając określony stan początkowy będącym położeniem wszystkich pojazdów na skrzyżowaniu, system zwraca dokładny plan, który prowadzi do szybkiego i bezpiecznego opuszczenia przez samochody skrzyżowań.
+Problemem przedstawionym w pracy jest szybkie i bezpieczne zaplanowanie ruchu na skrzyżowaniach. 
 \newline
 \newline
-Problem polega na znalezieniu kolejnych stanów prowadzących do optymalnego rozwiązania. Pojedyńczy stan oraz jego zmiany wprowadzają duża liczbę możliwości.
+Mając określony stan początkowy będącym położeniem wszystkich pojazdów na skrzyżowaniu, system zwraca dokładny plan, który prowadzi do szybkiego i bezpiecznego opuszczenia przez samochody skrzyżowań.
+\newline
+\newline
+Problem polega na znalezieniu kolejnych stanów prowadzących do optymalnego rozwiązania. Pojedyńczy stan oraz jego zmiany wprowadzają dużą liczbę możliwości.
 \newline
 \newline
 Dla przykładu pojazd musi mieć określoną pozycję na drodze na której się znajduje oraz prędkość. W kolejnych stanach pojazd może zmienić położenie, przyspieszyć, zwolnić lub prędkości nie zmieniać.
@@ -31,7 +34,13 @@ Kolejną trudnością w problemie, jest unikanie kolizji. Dla wszystkich możliw
 
 \section{Cel}
 
-Celem pracy jest opracowanie metody planującej ruch drogowy na skrzyżowaniach dróg wielopasmowych przy użyciu zmodyfikowanego algorytmu A*. Wynikiem rozwiązania jest szczegółowy opis, który dokladnie planuje ruch każdego z samochodów w celu najszybszego i bezpiecznego opuszczenia skrzyżowania. System zapewnia unikanie kolizji oraz optymalny dojazd do celu pojazdów na zadanej sieci skrzyżowań.
+Celem pracy jest opracowanie metody planującej ruch drogowy na skrzyżowaniach dróg wielopasmowych przy użyciu zmodyfikowanego algorytmu A*. 
+\newline
+\newline
+Wynikiem rozwiązania jest szczegółowy opis, który dokładnie planuje ruch każdego z samochodów w celu najszybszego i bezpiecznego opuszczenia skrzyżowania.
+\newline
+\newline
+System zapewnia unikanie kolizji oraz optymalny dojazd do celu pojazdów na zadanej sieci skrzyżowań.
 
 \section{Struktura pracy}
 TODO
