Removing useless graphics

--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -42,12 +42,12 @@ Zgodnie z wcześniej opisanymi założeniami dla skrzyżowania czterech dróg pr
 \newline
 Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{four-roads-crossroads-execution-time} oraz \ref{four-roads-crossroads-timesteps}
 \begin{figure}[ht]
-  \includegraphics[width=1.0\textwidth]{4_roads_crossroads_execution_time.png}
+  \includegraphics[width=1.0\textwidth]{4_roads_crossroads_execution_time_2.png}
   \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
   \label{four-roads-crossroads-execution-time}
 \end{figure}
 \begin{figure}[ht]
-  \includegraphics[width=1.0\textwidth]{4_roads_crossroads_timesteps.png}
+  \includegraphics[width=1.0\textwidth]{4_roads_timesteps_2.png}
   \caption{Wykres zależności kroków czasowych od liczby pojazdów}
   \label{four-roads-crossroads-timesteps}
 \end{figure}
@@ -59,12 +59,12 @@ Dla skrzyżowania ośmiu dróg też zostało przeprowadzone 180 uruchomień.
 \newline
 Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{four-roads-crossroads-execution-time} oraz \ref{four-roads-crossroads-timesteps}
 \begin{figure}[H]
-    \includegraphics[width=1.0\textwidth]{8_roads_crossroads_execution_time.png}
+    \includegraphics[width=1.0\textwidth]{8_roads_execution_time_2.png}
   \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
   \label{eight-roads-crossroads-execution-time}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[width=1.0\textwidth]{8_roads_crossroads_timesteps.png}
+    \includegraphics[width=1.0\textwidth]{8_roads_timesteps_2.png}
   \caption{Wykres zależności kroków czasowych od liczby pojazdów}
   \label{eight-roads-crossroads-timesteps}
 \end{figure}
@@ -79,7 +79,7 @@ Wykonując pomiary uzgodnione zostały wspólne warunki w obu rozwiązanich tak,
 \newline
 Wykres z wynikami pokazany jest na rysunku \ref{comparison}
 \begin{figure}[ht]
-  \includegraphics[width=1.0\textwidth]{8_roads_comparison.png}
+  \includegraphics[width=1.0\textwidth]{8_roads_comparison_2.png}
   \caption{Porównanie rozwiązania ze zmodyfikowanym A* z zoptymalizowanymi światłami drogowymi na skrzyżowaniu ośmiu dróg}
   \label{comparison}
 \end{figure}
