--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -1,4 +1,4 @@
-\chapter{Implementacja} \label{chap:implementation}
+\mychapter{4}{Implementacja} \label{chap:implementation}
 
 \section{Opis modelu danych do reprezentacji skrzyżowań}
 
