State of art spellcheck

--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -30,7 +30,7 @@ Problem polega na znalezieniu kolejnych stanów prowadzących do optymalnego roz
 Dla przykładu pojazd musi mieć określoną pozycję na drodze na której się znajduje oraz prędkość. W kolejnych stanach pojazd może zmienić położenie, przyspieszyć, zwolnić lub prędkości nie zmieniać.
 \newline
 \newline
-Kolejną trudnością w problemie, jest unikanie kolizji. Dla wszystkich możliwość algorytm planowania, powinien usunąć wszystkie możliwości kolizji na jednym pasie oraz przy przekraczaniu przez skrzyżowanie.
+Kolejną trudnością w problemie, jest unikanie kolizji. Dla wszystkich możliwość algorytm planowania powinien usunąć wszystkie możliwości kolizji na jednym pasie oraz przy przekraczaniu przez skrzyżowanie.
 
 \section{Cel}
 
