--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -3,10 +3,11 @@
 
 \section{Wprowadzenie}
 
-W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych. Podejście przestawione w pracy bierze pod uwagę bezpieczeństwo, unikanie kolizji oraz zapewnia szybkie opuszczenie skrzyżowania przez pojazdy. Realizowane jest to, poprzez przedstawienie każdemu z pojazdów dokładnego planu opisującego jak ma się poruszać po drodze. Rozwiązanie jest jest szybsze od podejścia ze światłami drogowymi, ponieważ usunięte jest opóźnienie spowodowane światełm pomarańczowym na każdym ze szkrzyżowań. Użyty w pracy algorytm A* opiera się o stan opisuący położenie wszystkich samochodów na sieci skrzyżowań. Algorytm zapewnia unikanie kolizji w czasie rzeczywistym - w niektórych rozwiązaniach kolizje usuwane są przez kilkakrotne uruchamianie algorytmu.
+W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych. Podejście przestawione w pracy bierze pod uwagę bezpieczeństwo, unikanie kolizji oraz zapewnia szybkie opuszczenie skrzyżowania przez pojazdy. Realizowane jest to, poprzez przedstawienie każdemu z pojazdów dokładnego planu opisującego jak ma się poruszać po drodze. Rozwiązanie jest szybsze od podejścia ze światłami drogowymi, ponieważ usunięte jest opóźnienie spowodowane światełm pomarańczowym na każdym ze szkrzyżowań. Użyty w pracy algorytm A* opiera się o stan opisuący położenie wszystkich samochodów na sieci skrzyżowań. Algorytm zapewnia unikanie kolizji w czasie rzeczywistym - w niektórych rozwiązaniach kolizje usuwane są przez kilkakrotne uruchamianie algorytmu.
+
 \section{Planowanie ruchu przy użyciu modyfikacji A*}
 
-Zastosowanie metody planującej ruch drogowy przy użyciu zmodyfikowanej wersji algorytmu A* pozwala na bezpieczne i szybkie zaplanowanie ruchu drogowego dla pojazdów na sieci skrzyżowań.
+Zastosowanie metody planującej ruch drogowy przy użyciu zmodyfikowanej wersji algorytmu A* pozwala na bezpieczne i szybkie zaplanowanie ruchu drogowego dla pojazdów na sieci skrzyżowań. Metoda planuje ruch drogowy, dzięki któremu ruch na skrzyżowaniu przebiega sprawniej w porównaniu do rozwiązań ze światłami drogowymi wraz z ich optymalizacjami. Wadą metody jest złożoność obliczeniowa, która jest zależna od ilości samochodów na skrzyżowaniach. Czas trwania przeprowadzonych pomiarów dla 14 pojazdów znajdujących się na skrzyżowaniu ośmiu dróg nawet do kilku godzin, co jest znaczącym limitem dla rozwiązania.
 \newline
 \newline
 Rozwiązanie, mając podane położenie samochodów na sieci skrzyżowań liczy plan dla każdego z pojazdów. W planie znajdują się informacje jak szybko pojazd powinien jechać, kiedy powinien zwolnić lub przyspieszyć aby ominąć kolizję.
