Adding safety parameter

--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -7,7 +7,7 @@ W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wie
 
 \section{Planowanie ruchu przy użyciu modyfikacji A*}
 
-Zastosowanie metody planującej ruch drogowy przy użyciu zmodyfikowanej wersji algorytmu A* pozwala na bezpieczne i szybkie zaplanowanie ruchu drogowego dla pojazdów na sieci skrzyżowań. Metoda planuje ruch drogowy, dzięki któremu ruch na skrzyżowaniu przebiega sprawniej w porównaniu do rozwiązań ze światłami drogowymi wraz z ich optymalizacjami. Wadą metody jest złożoność obliczeniowa, która jest zależna od ilości samochodów na skrzyżowaniach. Czas trwania przeprowadzonych pomiarów dla 14 pojazdów znajdujących się na skrzyżowaniu ośmiu dróg nawet do kilku godzin, co jest znaczącym limitem dla rozwiązania.
+Można postawić tezę: zastosowanie metody planującej ruch drogowy przy algorytmu A* pozwala na zaplanowanie bezkolizyjnego ruchu drogowego dla pojazdów na sieci skrzyżowań. Metoda planuje ruch drogowy, dzięki któremu ruch na skrzyżowaniu przebiega sprawniej w porównaniu do rozwiązań ze światłami drogowymi wraz z ich optymalizacjami. Wadą metody jest złożoność obliczeniowa, która jest zależna od ilości samochodów na skrzyżowaniach. Czas trwania przeprowadzonych pomiarów dla 14 pojazdów znajdujących się na skrzyżowaniu ośmiu dróg nawet do kilku godzin, co jest znaczącym limitem dla rozwiązania.
 \newline
 \newline
 Rozwiązanie, mając podane położenie samochodów na sieci skrzyżowań liczy plan dla każdego z pojazdów. W planie znajdują się informacje jak szybko pojazd powinien jechać, kiedy powinien zwolnić lub przyspieszyć aby ominąć kolizję.
